<resources>
    <string name="app_name">Petagram</string>
    <string name="nombre">Nombre Mascota</string>
    <string name="contador">5</string>
    <string name="menu_contact">Contacto</string>
    <string name="menu_about">Acerca de</string>
    <string name="formulario_contacto_nom">Nombre:</string>
    <string name="formulario_contacto_email">Email:</string>
    <string name="formulario_contacto_com">Comentario:</string>
    <string name="btn_enviar_com">Enviar Comentario</string>
    <string name="nombre_desarrollador">Leonardo Siangas Revollo</string>
    <string name="telefono_desarrollador">(+591) 79968653 </string>
    <string name="pais_desarrollador">Bolivia</string>
    <string name="email_desarrollador">lsrev311@gmail.com</string>
    <string name="nombre_perfil">Theo</string>
    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>

</resources>