<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".FormularioContacto">
    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:orientation="vertical"
        android:layout_marginTop="50dp">

        <com.google.android.material.textfield.TextInputLayout
            android:id="@+id/tvNombreContacto"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:hint="@string/formulario_contacto_nom">

            <com.google.android.material.textfield.TextInputEditText
                android:id="@+id/editNombreContacto"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:inputType="text"/>

        </com.google.android.material.textfield.TextInputLayout>
        <com.google.android.material.textfield.TextInputLayout
            android:id="@+id/tvEmailContacto"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:hint="@string/formulario_contacto_email">

            <com.google.android.material.textfield.TextInputEditText
                android:id="@+id/editEmailContacto"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:inputType="textEmailAddress"/>
            <com.google.android.material.textfield.TextInputLayout
                android:id="@+id/tvMsjContacto"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:hint="@string/formulario_contacto_com">

                <com.google.android.material.textfield.TextInputEditText
                    android:id="@+id/editMsjContacto"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:inputType="textMultiLine"/>

            </com.google.android.material.textfield.TextInputLayout>

        </com.google.android.material.textfield.TextInputLayout>
        <RelativeLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content">
            <Button
                android:id="@+id/enviarComentario"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="@string/btn_enviar_com"
                android:layout_alignParentBottom="true"/>
        </RelativeLayout>


    </LinearLayout>


</LinearLayout>